--- a/firebase2/todo.txt
+++ b/firebase2/todo.txt
@@ -2,7 +2,7 @@
 * make individual page for each user with hash (https://randomkeygen.com/)
 - make my form where i can select the winners, which will then update the "winners" parts of each user
 - make page that displays ALL the users/winners with their wins/losses etc.
-- make nom selection form dynamically generated from json
+* make nom selection form dynamically generated from arrays
 
 
 - design it and make it look nice!
@@ -11,3 +11,5 @@
 - AND also if people try and visit other users' URLs
 
 * make the html into dynamic components
+
+- "undefined" after content...???
